# modern_shop

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  default.conf  default.env  docker-compose-dev.yaml  docker-compose-prod.yaml  docker-compose-stage.yaml  pyproject.toml  requirements.txt
core/: db.sqlite3  manage.py  pyproject.toml
core/account/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/account/migrations/: 0001_initial.py  0002_alter_profile_address_alter_profile_email_and_more.py  0003_profile_birth_date.py  0004_profile_avatar.py  0005_alter_profile_avatar.py
core/account/tests/: test_forms.py  test_models.py  test_profile_views.py  test_views.py
core/cart/: admin.py  forms.py  models.py  urls.py  views.py
core/cart/migrations/: 0001_initial.py  0002_remove_orderitem_calculated_discount.py  0003_alter_order_paid_amount_alter_orderitem_final_price.py  0004_remove_order_first_name_remove_order_last_name_and_more.py  0005_remove_order_zip_code.py  (+7 more)
core/core/: base.py  settings.prod.py  settings.py  urls.py
core/home/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
core/product/: admin.py  models.py  tests.py  urls.py  views.py
core/templates/: 404.html  base.html  cart-empty.html  cart.html  detail.html  factor.html  index.html  listview.html  login-verification.html  login.html  profile-additional-info.html  profile-favorites.html  profile-order-2.html  profile-order.html  profile.html  shipping-complate-buy.html  shipping-no-complate-buy.html  shipping-payment.html  welcome.html  wishlist.html
(+54 files in other folders)
