[tool.poetry]
name = "modern-shop"
version = "0.1.0"
description = ""
authors = ["MasoudKheradmandi <104209505+MasoudKheradmandi@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
pillow = "^10.2.0"
django-ckeditor = "^6.7.0"
django-render-partial = "^0.4"
django-split-settings = "^1.2.0"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
